# webbee-code

./: CHANGELOG.md  LICENSE  README.md  install.sh  pyproject.toml
.github/workflows/: publish.yml  release.yml
docs/superpowers/plans/: 2026-07-21-interactive-home-dashboard.md
src/webbee/: account.py  active_sessions.py  banner_art.py  boot.py  checkpoints.py  cli.py  clipboard.py  clipboard_read.py  coding_context.py  commands.py  config.py  consent.py  details.py  events.py  frames.py  home.py  home_view.py  http.py  instance_lock.py  mode_store.py  newtab_mode.py  output_pane.py  queue_panel.py  reflow.py  remote.py  render.py  repl.py  repo.py  selection.py  session.py  sessions.py  sizing.py  slots.py  steer.py  stream.py  tabs.py  thread.py  todo_panel.py  tokens.py  tools.py  (+5 more)
src/webbee/intel/: chunker.py  embed.py  graph.py  indexer.py  models.py  query.py  service.py  store.py  vectors.py  watch.py
tests/: conftest.py  test_account.py  test_active_sessions.py  test_checkpoints.py  test_cli.py  test_clipboard.py  test_clipboard_read.py  test_coding_context.py  test_commands.py  test_config.py  test_consent.py  test_cpc_contract_stable.py  test_details.py  test_events.py  test_freeze_fix.py  test_home.py  test_home_view.py  test_instance_lock.py  test_intel_chunker.py  test_intel_embed.py  test_intel_graph.py  test_intel_indexer.py  test_intel_no_numpy.py  test_intel_query.py  test_intel_service.py  test_intel_store.py  test_intel_vectors.py  test_intel_watch.py  test_marathon.py  test_mode_store.py  test_newtab_mode.py  test_packaging.py  test_reflow.py  test_render.py  test_repl.py  test_repo.py  test_session.py  test_sessions.py  test_sizing.py  test_slots.py  (+14 more)
