[project]
name = "webbee"
version = "0.1.0"
description = "Webbee 🐝 — the Imperal coding agent in your terminal"
readme = "README.md"
license = { text = "Proprietary" }
requires-python = ">=3.11"
dependencies = ["imperal-mcp>=0.4.0", "imperal-sdk>=5.9.2", "httpx>=0.27", "httpx-sse>=0.4", "rich>=13.7", "prompt_toolkit>=3"]
keywords = ["webbee", "imperal", "coding-agent", "cli", "icnli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
]

[project.urls]
Homepage = "https://imperal.io"
Documentation = "https://docs.imperal.io"

[project.scripts]
webbee = "webbee.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/webbee"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
