[project]
name = "webbee"
version = "0.1.6"
description = "Webbee 🐝 — the Imperal Cloud coding agent in your terminal"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "Imperal, Inc.", email = "hello@imperal.io" }]
dependencies = ["imperal-mcp>=0.5.0", "imperal-sdk>=5.9.2", "httpx>=0.27", "httpx-sse>=0.4", "rich>=13.7", "prompt_toolkit>=3"]
keywords = ["webbee", "imperal", "icnli", "coding-agent", "ai-agent", "cli", "terminal", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://imperal.io"
Documentation = "https://docs.imperal.io"
Repository = "https://github.com/imperalcloud/webbee-code"
Issues = "https://github.com/imperalcloud/webbee-code/issues"
Protocol = "https://icnli.org"

[project.scripts]
webbee = "webbee.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/webbee"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
